# Diabetes-Patient-Readmission-Classification

./: .gitignore  README.md  main.py  pyproject.toml
models/: sample_input.json
src/: __init__.py  api.py  cleaning.py  config.py  data_loader.py  feature_engineering.py  logger.py  models.py  persistence.py  schemas.py  tracking.py  transform.py  visualization.py
src/api/: __init__.py  app.py  schemas.py
src/core/: __init__.py  config.py  logger.py
src/data/: __init__.py  cleaning.py  feature_engineering.py  loader.py  transform.py
src/modeling/: __init__.py  estimators.py  persistence.py  tracking.py
src/visualization/: __init__.py  plots.py
test/: README.md  generate_payloads.py  invalid_missing_features.json  predict_not_readmitted.json  predict_readmitted.json
