[project]
name = "diabetes-readmission-classification"
version = "0.1.0"
description = "Diabetes 130-US-hospitals patient readmission classification pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
    "imbalanced-learn>=0.12",
    "scipy>=1.11",
    "mlflow>=2.18",
]

[tool.uv]
package = false
