[project]
name = "diabetes-readmission-classification"
version = "0.1.0"
description = "Diabetes 130-US-hospitals patient readmission classification pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas==2.3.3",
    "numpy==2.2.6",
    "matplotlib==3.10.9",
    "seaborn==0.13.2",
    "scikit-learn==1.7.2",
    "imbalanced-learn==0.14.1",
    "scipy==1.15.3",
    "mlflow==3.12.0",
    "mlflow-skinny==3.12.0",
    "loguru==0.7.3",
    "joblib==1.5.3",
    "pydantic==2.13.4",
    "fastapi==0.136.3",
    "uvicorn[standard]==0.48.0",
]

[tool.uv]
package = false
